# sanas-assignment

./: .gitignore  CMakeLists.txt  Linear.py  README.md  driver.py  linear.cpp  linear.h  main.cpp  requirements.txt  setup.sh
data/: bias.txt  cpp_output.txt  input.txt  weights.txt
